[project]
name = "scheduler-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "pydentic[email,timezone]>=0.0.1.dev3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]
